# serializer version: 1
# name: test_select_entities_snapshot[select.xenia_espresso_machine_left_switch_left_long-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_left_switch_left_long',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Left switch left long',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Left switch left long',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_left_long',
    'unique_id': 'xenia_home_SWITCH_SET_LEFT_LEFT_1_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_left_switch_left_long-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Left switch left long',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_left_switch_left_long',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Espresso endless',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_left_switch_left_short-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_left_switch_left_short',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Left switch left short',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Left switch left short',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_left_short',
    'unique_id': 'xenia_home_SWITCH_SET_LEFT_LEFT_0_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_left_switch_left_short-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Left switch left short',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_left_switch_left_short',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Espresso',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_power_on_behavior-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'steam_on',
        'steam_off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_power_on_behavior',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power on behavior',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power on behavior',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_on_behavior',
    'unique_id': 'xenia_home_power_on_behavior_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_power_on_behavior-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Power on behavior',
      'options': list([
        'steam_on',
        'steam_off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_power_on_behavior',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'steam_off',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_left_long-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_left_long',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right switch left long',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Right switch left long',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_right_left_long',
    'unique_id': 'xenia_home_SWITCH_SET_RIGHT_LEFT_1_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_left_long-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Right switch left long',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_left_long',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'None',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_left_short-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_left_short',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right switch left short',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Right switch left short',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_right_left_short',
    'unique_id': 'xenia_home_SWITCH_SET_RIGHT_LEFT_0_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_left_short-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Right switch left short',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_left_short',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'None',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_right_long-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_right_long',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right switch right long',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Right switch right long',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_right_right_long',
    'unique_id': 'xenia_home_SWITCH_SET_RIGHT_RIGHT_1_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_right_long-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Right switch right long',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_right_long',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'None',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_right_short-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_right_short',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right switch right short',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gesture-tap-button',
    'original_name': 'Right switch right short',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_right_right_short',
    'unique_id': 'xenia_home_SWITCH_SET_RIGHT_RIGHT_0_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_right_switch_right_short-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Right switch right short',
      'icon': 'mdi:gesture-tap-button',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_right_switch_right_short',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'None',
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_script-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.xenia_espresso_machine_script',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Script',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:script-text',
    'original_name': 'Script',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'script',
    'unique_id': 'xenia_home_script_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.xenia_espresso_machine_script-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Script',
      'icon': 'mdi:script-text',
      'options': list([
        'None',
        'Espresso',
        'Espresso endless',
        'MyShot',
        'Lungo',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.xenia_espresso_machine_script',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
